Revert z-index to resolve dropdown issue.

--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -30,7 +30,7 @@ body > main {min-height: 400px;
 .utk-digital--header {
   width: 100%;
   position: relative;
-  z-index: 0;
+  z-index: 1;
   background-color: $smokey;
 
   @include respond(xs, sm) {
